Fixing colour pallette on IE10

--- a/angular-color-picker.css
+++ b/angular-color-picker.css
@@ -16,6 +16,7 @@
     height: 200px;
     background: -webkit-linear-gradient(left, #fff 0, transparent 100%);
     background: -moz-linear-gradient(left, #fff 0, transparent 100%);
+    background: -ms-linear-gradient(left, #fff 0, transparent 100%);
     background: linear-gradient(left, #fff 0, transparent 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#00ffffff', GradientType='1');
 }
@@ -24,6 +25,7 @@
     height: 200px;
     background: -webkit-linear-gradient(top, transparent 0, #000 100%);
     background: -moz-linear-gradient(top, transparent 0, #000 100%);
+    background: -ms-linear-gradient(top, transparent 0, #000 100%);
     background: linear-gradient(top, transparent 0, #000 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#ff000000');
     position: relative;
@@ -50,6 +52,7 @@
     width: 30px;
     background: -webkit-linear-gradient(top, #ff0000 0%, #ffff00 17%, #00ff00 33%, #00ffff 50%, #0000ff 67%, #ff00ff 83%, #ff0000 100%);
     background: -moz-linear-gradient(top, #ff0000 0%, #ffff00 17%, #00ff00 33%, #00ffff 50%, #0000ff 67%, #ff00ff 83%, #ff0000 100%);
+    background: -ms-linear-gradient(top, #ff0000 0%, #ffff00 17%, #00ff00 33%, #00ffff 50%, #0000ff 67%, #ff00ff 83%, #ff0000 100%);
     background: linear-gradient(top, #ff0000 0%, #ffff00 17%, #00ff00 33%, #00ffff 50%, #0000ff 67%, #ff00ff 83%, #ff0000 100%);
 }
 .angular-color-picker > ._hues > ._cursor {
